--- a/.github/workflows/main_eshanee-chetan-api.yml
+++ b/.github/workflows/main_eshanee-chetan-api.yml
@@ -21,8 +21,18 @@ jobs:
     - name: Install dependencies
       run: npm install
         
+    - name: Remove dev dependencies
+      run: npm prune --omit=dev
+      
     - name: Deploy to Azure Web App
       uses: azure/webapps-deploy@v1
       with:
         app-name: 'eshanee-chetan-api'
         publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
+        
+    - name: Health check
+      run: |
+        echo "Waiting for deployment to complete..."
+        sleep 30
+        echo "Checking app health..."
+        curl -f https://eshanee-chetan-api-gaa8f8cnc5fpgcaz.canadacentral-01.azurewebsites.net || echo "Health check failed, but deployment might still be processing"
