--- a/.github/workflows/main_eshanee-chetan-api.yml
+++ b/.github/workflows/main_eshanee-chetan-api.yml
@@ -25,5 +25,6 @@ jobs:
       uses: azure/webapps-deploy@v2
       with:
         app-name: 'eshanee-chetan-api'
+        slot-name: 'production'
         publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
         package: '.'
