--- a/.github/workflows/main_eshanee-chetan-api.yml
+++ b/.github/workflows/main_eshanee-chetan-api.yml
@@ -28,3 +28,4 @@ jobs:
         slot-name: 'production'
         publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
         package: '.'
+        clean: true
