--- a/.github/workflows/main_eshanee-chetan-api.yml
+++ b/.github/workflows/main_eshanee-chetan-api.yml
@@ -22,9 +22,10 @@ jobs:
       run: npm install --production
         
     - name: Deploy to Azure Web App
-      uses: azure/webapps-deploy@v2
+      id: deploy-to-webapp
+      uses: azure/webapps-deploy@v3
       with:
         app-name: 'eshanee-chetan-api'
-        slot-name: 'production'
+        slot-name: 'Production'
         publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
         package: '.'
