updating frontend url

--- a/.env.production
+++ b/.env.production
@@ -14,4 +14,4 @@ JWT_SECRET=your-super-strong-production-jwt-secret-here-make-it-very-long-and-ra
 JWT_EXPIRE=7d
 
 # CORS Configuration (will update after frontend deployment)
-FRONTEND_URL=*
+FRONTEND_URL=https://kind-cliff-030d39210-preview.centralus.6.azurestaticapps.net
